# android-camera-ndk-boilerplate

./: .gitignore  .travis.yml  README.md  local.properties
app/: build.gradle
app/src/main/java/com/neza/myrobot/: JNIUtils.java  NezaActivityFragment.java
app/src/main/jni/: CMakeLists.txt  native.cpp
app/src/main/res/layout/: fragment_main.xml
gradle/wrapper/: gradle-wrapper.properties
